--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -9,20 +9,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Número Secreto</title>
+    <title>JS Game</title>
 </head>
 
 <body>
+
     <div class="container">
         <div class="container__conteudo">
             <div class="container__informacoes">
                 <div class="container__texto">
-                    <h2>Boas vindas ao Jogo do número secreto</h2>
+                    <h1></h1>
+                    <p class="texto__paragrafo"></p>
                 </div>
-                <img src="./img/trophy.png" alt="ícone de um troféu" />
+                <input type="number" min="1" max="1000" class="container__input">
+                <div class="chute container__botoes">
+                    <button onclick="verificarChute()" class="container__botao">Chutar</button>
+                    <button onclick="reiniciarJogo()" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
+                </div>
             </div>
+            <img src="./img/ia.png" alt="Robozinho" class="container__imagem-robo" />
         </div>
     </div>
+
+
+
+
     <script src="app.js" defer></script>
 </body>
 
